--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "nolimitbox",
+  "name": "vercel-file-uploader",
   "version": "1.0.0",
-  "description": "NoLimitBox - Groter. Meer. Onbeperkt.",
-  "main": "main.js",
+  "description": "Simple file upload service for Vercel (stateless, no auth)",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon main.js",
-    "start": "node main.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "mime-types": "^2.1.35"
+    "multer": "^2.0.1"
   },
-  "keywords": ["file-upload", "storage", "vercel"],
-  "author": "Matthias Lubbertsen",
-  "license": "MIT"
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
