--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/*.js",
-      "use": "@vercel/node"
-    }
+    { "src": "api/index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/view/(.*)",
-      "dest": "/api/view?id=$1"
-    },
-    {
-      "src": "/download/(.*)",
-      "dest": "/api/download?id=$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ],
-  "functions": {
-    "api/*.js": {
-      "maxDuration": 30
-    }
-  }
+    { "src": "/(.*)", "dest": "/api/index.js" }
+  ]
 }
