--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
