--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "^2.0.1",
+    "multer": "^1.4.5-lts.1",
     "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
